<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/layout_top_back"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler_view"
        />
    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_add_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add" />
        <Button
            android:id="@+id/btn_ed_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ed" />
        <Button
            android:id="@+id/btn_del_product"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delall" />

    </LinearLayout>

</RelativeLayout>